--- a/front/package.json
+++ b/front/package.json
@@ -17,9 +17,11 @@
     "@mui/joy": "^5.0.0-beta.30",
 
     "@mui/material": "^5.15.12",
+    "@mui/styled-engine-sc": "^6.0.0-alpha.17",
     "next": "14.1.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "styled-components": "^6.1.8"
   },
   "devDependencies": {
     "@types/node": "^20",
