--- a/front/package.json
+++ b/front/package.json
@@ -11,15 +11,18 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
+    "@faker-js/faker": "^8.4.1",
     "@mui/icons-material": "^5.15.12",
     "@mui/joy": "^5.0.0-beta.30",
     "@mui/material": "^5.15.12",
     "@mui/styled-engine-sc": "^6.0.0-alpha.17",
     "@types/express": "^4.17.21",
     "axios": "^1.6.8",
+    "chart.js": "^4.4.2",
     "formik": "^2.4.5",
     "next": "14.1.3",
     "react": "^18",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
     "react-toastify": "^10.0.5",
     "styled-components": "^6.1.8",
