--- a/front/package.json
+++ b/front/package.json
@@ -19,6 +19,7 @@
     "@types/express": "^4.17.21",
     "axios": "^1.6.8",
     "chart.js": "^4.4.2",
+    "date-fns": "^3.6.0",
     "formik": "^2.4.5",
     "next": "14.1.3",
     "react": "^18",
