--- a/front/package.json
+++ b/front/package.json
@@ -21,6 +21,7 @@
     "chart.js": "^4.4.2",
     "date-fns": "^3.6.0",
     "formik": "^2.4.5",
+    "jsonwebtoken": "^9.0.2",
     "next": "14.1.3",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
@@ -32,6 +33,7 @@
     "yup": "^1.4.0"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
