--- a/front/package.json
+++ b/front/package.json
@@ -26,6 +26,7 @@
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
+    "react-number-format": "^5.3.4",
     "react-swipeable-views-utils": "^0.14.0",
     "react-toastify": "^10.0.5",
     "styled-components": "^6.1.8",
